[gd_scene load_steps=23 format=3 uid="uid://cdobvtrp8fbre"]

[ext_resource type="Script" uid="uid://du0n4sfgdvotk" path="res://scripts/main.gd" id="1_85g3d"]
[ext_resource type="PackedScene" uid="uid://cfk34clxvyxak" path="res://scenes/player.tscn" id="2_0wfyh"]
[ext_resource type="Texture2D" uid="uid://b8weeoooy81xh" path="res://Asset/Sprites/Background.png" id="2_choun"]
[ext_resource type="PackedScene" uid="uid://c2jctupe4jpw8" path="res://scenes/spike.tscn" id="3_sugp2"]
[ext_resource type="PackedScene" uid="uid://ohs1yhpxvmqt" path="res://scenes/hud.tscn" id="4_choun"]
[ext_resource type="PackedScene" uid="uid://chfjkapulvkkm" path="res://scenes/slime.tscn" id="4_jyhfs"]
[ext_resource type="PackedScene" uid="uid://cht2g6lhqwtk3" path="res://scenes/platform.tscn" id="4_ya4ey"]
[ext_resource type="PackedScene" uid="uid://diqpi2ydtanom" path="res://scenes/gem.tscn" id="5_o6xl0"]
[ext_resource type="PackedScene" uid="uid://51ossvacpcmp" path="res://scenes/rock.tscn" id="6_tipki"]
[ext_resource type="PackedScene" uid="uid://dwpbh6f24bcrw" path="res://scenes/checkpoint.tscn" id="7_85g3d"]
[ext_resource type="PackedScene" uid="uid://c8gfayqtixdap" path="res://scenes/heal_pickup.tscn" id="9_gqmmt"]
[ext_resource type="AudioStream" uid="uid://bwvbh7by0xx6w" path="res://Asset/Sounds/1 - Adventure Begin.ogg" id="11_ya4ey"]
[ext_resource type="AudioStream" uid="uid://umjbb5cttddm" path="res://Asset/Sounds/GameOver2.wav" id="12_jkv2x"]
[ext_resource type="AudioStream" uid="uid://dgkk0yh6me7y2" path="res://Asset/Sounds/Hit.wav" id="13_jbj1t"]
[ext_resource type="AudioStream" uid="uid://bj5466555hwbg" path="res://Asset/Sounds/Jump.wav" id="14_muem4"]
[ext_resource type="AudioStream" uid="uid://cffrvgpjvcyup" path="res://Asset/Sounds/Success1.wav" id="15_dp3eg"]
[ext_resource type="AudioStream" uid="uid://bbrqpyvfd4r7r" path="res://Asset/Sounds/Running.mp3" id="16_jbj1t"]
[ext_resource type="AudioStream" uid="uid://ddv3laferdfcy" path="res://Asset/Sounds/LevelUp1.wav" id="17_muem4"]
[ext_resource type="AudioStream" uid="uid://cc3xyfi4lhdft" path="res://Asset/Sounds/Heal.wav" id="18_0ld40"]
[ext_resource type="FontFile" uid="uid://di0j2x14ipf1l" path="res://Asset/Uranus_Pixel_11Px.ttf" id="18_dp3eg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_choun"]
size = Vector2(1173, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eb6dy"]
size = Vector2(1244, 90)

[node name="Level" type="Node2D"]
script = ExtResource("1_85g3d")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="background" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(288, 162)
texture = ExtResource("2_choun")
metadata/_edit_lock_ = true

[node name="background2" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(864, 162)
texture = ExtResource("2_choun")
metadata/_edit_lock_ = true

[node name="World" type="Node2D" parent="."]
z_as_relative = false
y_sort_enabled = true

[node name="Player" parent="World" instance=ExtResource("2_0wfyh")]
position = Vector2(27, 251.00002)
scale = Vector2(2.9505987, 3.8737986)
jump_force = 465.0

[node name="Platforms" type="Node2D" parent="World"]
position = Vector2(-23, -8)

[node name="platform" parent="World/Platforms" instance=ExtResource("4_ya4ey")]
position = Vector2(404, 140)
scale = Vector2(1.1942999, 1)

[node name="platform2" parent="World/Platforms" instance=ExtResource("4_ya4ey")]
position = Vector2(791, 246)
scale = Vector2(1.2399951, 1)

[node name="platform3" parent="World/Platforms" instance=ExtResource("4_ya4ey")]
position = Vector2(240, 271)
scale = Vector2(1.303802, 1)

[node name="platform4" parent="World/Platforms" instance=ExtResource("4_ya4ey")]
position = Vector2(1009, 276)
scale = Vector2(1.5200049, 1)

[node name="Ground" type="StaticBody2D" parent="World/Platforms"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Platforms/Ground"]
position = Vector2(596, 307.5)
shape = SubResource("RectangleShape2D_choun")

[node name="Harzards" type="Node2D" parent="World"]
position = Vector2(-2, 38)

[node name="Spike" parent="World/Harzards" instance=ExtResource("3_sugp2")]
position = Vector2(656.00006, 195)
scale = Vector2(3.3943608, 5.164319)

[node name="Slime" parent="World/Harzards" instance=ExtResource("4_jyhfs")]
position = Vector2(381, 144)
scale = Vector2(4.0648127, 3.755618)
speed = 50.0

[node name="Rock" parent="World/Harzards" instance=ExtResource("6_tipki")]
position = Vector2(1003, -85)

[node name="Pickups" type="Node2D" parent="World"]
position = Vector2(-307, -4)

[node name="Gem5" parent="World/Pickups" instance=ExtResource("5_o6xl0")]
position = Vector2(1272, 172)
type = 0

[node name="Gem4" parent="World/Pickups" instance=ExtResource("5_o6xl0")]
position = Vector2(1058, 107)
type = 3

[node name="Gem2" parent="World/Pickups" instance=ExtResource("5_o6xl0")]
position = Vector2(823, 227)
type = 0

[node name="Gem" parent="World/Pickups" instance=ExtResource("5_o6xl0")]
position = Vector2(697, 27)
type = 2

[node name="Gem3" parent="World/Pickups" instance=ExtResource("5_o6xl0")]
position = Vector2(589, 206)

[node name="HealPickup" parent="World/Pickups" instance=ExtResource("9_gqmmt")]
position = Vector2(879, 51)

[node name="Checkpoint" parent="World" instance=ExtResource("7_85g3d")]
position = Vector2(1107, 207)
scale = Vector2(2.7533875, 2.9733188)

[node name="KillZone" type="Area2D" parent="."]
position = Vector2(-6, 207)

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2(575, 154)
shape = SubResource("RectangleShape2D_eb6dy")

[node name="HUD" parent="." instance=ExtResource("4_choun")]

[node name="Music" type="Node" parent="."]

[node name="BGM" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("11_ya4ey")
autoplay = true
bus = &"Music"

[node name="GameOver" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("12_jkv2x")
bus = &"Music"

[node name="SFX" type="Node" parent="."]

[node name="Hit" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("13_jbj1t")
max_polyphony = 8
bus = &"SFX"

[node name="Jump" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("14_muem4")
max_polyphony = 8
bus = &"SFX"

[node name="Success" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("15_dp3eg")
max_polyphony = 8
bus = &"SFX"

[node name="RunLoop" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("16_jbj1t")
max_polyphony = 8
bus = &"SFX"

[node name="LevelUp" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("17_muem4")
max_polyphony = 8
bus = &"SFX"

[node name="Heal" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("18_0ld40")
max_polyphony = 8
bus = &"SFX"

[node name="LevelUpLabel" type="Label" parent="."]
visible = false
offset_left = 660.0
offset_top = 38.0
offset_right = 1088.0
offset_bottom = 138.0
theme_override_colors/font_color = Color(1, 1, 0.23137255, 1)
theme_override_colors/font_shadow_color = Color(0.85, 0.53833336, 0, 0)
theme_override_colors/font_outline_color = Color(0.9607843, 0.5176471, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("18_dp3eg")
theme_override_font_sizes/font_size = 100
text = "LEVEL UP!"

[node name="Fade" type="ColorRect" parent="."]
visible = false
offset_right = 1154.0
offset_bottom = 318.0
color = Color(0.02, 0.02, 0.02, 1)
